--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,18 +1,12 @@
 @import "tailwindcss";
 
 :root {
-  --background: #f7f4ea;
-  --main-text-color: #095A69;
-  --text-font: 'Nunito', sans-serif;
-  --header-font: 'Futura', sans-serif;
+  --background: #f8f2e8;
+  --lighter-background: #fcfaf6;
+  --main-text-color: #095a69;
+  --text-font: "Nunito", sans-serif;
+  --header-font: "Futura", sans-serif;
   --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -27,13 +21,19 @@ body {
   color: var(--foreground);
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: var(--header-font);
   color: var(--main-text-color);
 }
 
 h2 {
   font-size: 250%;
+}
+
+h3 {
+  font-size: 200%;
 }
 
 h5 {
@@ -48,8 +48,8 @@ p {
 }
 
 .custom-btn {
-  width: 300px;           
-  height: 60px; 
+  width: 300px;
+  height: 60px;
   background-color: #eae3d2;
   color: #085a69;
   border-radius: 40px;
@@ -72,4 +72,10 @@ p {
   height: auto;
   display: block;
   margin: 75px auto 0 auto; /* top, right, bottom, left */
+}
+
+.algo-card {
+  border-color: var(--main-text-color);
+  border-width: 2px;
+  background-color: var(--lighter-background);
 }
